# fastapi_proba

./: Dockerfile  README.md  database.py  main.py  pyproject.toml  readme.md  repository.py  router.py  schema.py  tasks.db
